dox/dev_guides/upgrade/upgrade.md
@@ -1979,3 +1979,9 @@ After the change, extended variant:
 Previously, sub-classes of *Message_Printer* have to provide a triplet of *Message_Printer::Send()* methods accepting different string representations: TCollection_AsciiString, TCollection_ExtendedString and Standard_CString.
 *Message_Printer* interface has been changed, so that sub-classes now have to implement only single method *Message_Printer::send()* accepting TCollection_AsciiString argument and having no Endl flag, which has been removed.
 Old three Message_Printer::Send() methods remain defined virtual with unused last argument and redirecting to new send() method by default.
+
+@subsection upgrade_750_draw_hotkeys Draw Harness hotkeys
+
+Draw Harness hotkeys **W** (Wireframe) and **S** (Shaded) have been re-mapped to **Ctrl+W** and **Ctrl+S**.
+Hotkey **A** has been remapped to **Backspace**.
+Hotkeys WASD and Arrays are now mapped for walk-through navigation in 3D Viewer.
